objects/EUR_CRM_Contract_Payment_Plan__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <description>Name of the account to which the contract belongs</description>
        <formula>EUR_CRM_Contract__r.EUR_CRM_Account__r.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_End_Date__c</fullName>
        <formula>EUR_CRM_Contract__r.EUR_CRM_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Start_Date__c</fullName>
        <formula>EUR_CRM_Contract__r.EUR_CRM_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract__c</fullName>
        <label>Contract (EU)</label>
        <referenceTo>EUR_CRM_Contract__c</referenceTo>
        <relationshipLabel>Contract Payment Plans (EU)</relationshipLabel>
        <relationshipName>Contract_Payment_Plan_Tables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Payment Plan (EU)</label>
    <nameField>
        <displayFormat>CPP-{00000000}</displayFormat>
        <label>Contract Payment Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Payment Plans (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_Contract_Payment_Plan</fullName>
        <active>true</active>
        <label>Contract Payment Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Contract_Payment_Plan</fullName>
        <active>true</active>
        <label>EUR DE Contract Payment Plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>